fixed a position error for the feedbacks on mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,7 +355,6 @@ body {
 
 @media screen and (max-width: 480px) {
   .card-feedback {
-    margin: 24px;
     height: 200px;
     display: flex;
     justify-content: space-between;
@@ -841,7 +840,8 @@ body {
   .main-no-feedback {
     border-radius: 0;
     margin-top: 0;
-    width: 100%; }
+    width: 100%;
+    height: 100vh; }
     .main-no-feedback .no-feedback-container .content {
       text-align: center;
       width: 278px;
