--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -133,11 +133,5 @@
             margin-right: 16px;
             border: none;
         }
-
-        .header-container {
-            // label {
-            //     margin-left: 28px;
-            // }
-        }
     }
 }
