--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -169,6 +169,7 @@
         border-radius: 0;
         margin-top: 0;
         width: 100%;
+        height: 100vh;
 
         .no-feedback-container {
             .content {
